# prime-pipeline

./: .gitignore  README.md  comm.py  generate.py  model.py  pipeline.py  pyproject.toml  test.py  utils.py  world.py
iroh_py/: Cargo.toml  README.md  pyproject.toml
iroh_py/src/: bindings.rs  lib.rs  node.rs  receiver.rs  sender.rs
iroh_py/tests/: bidirectional.rs  test_bidirectional.py  test_unidirectional.py  unidirectional.rs
script/: benchmark.py  benchmark.sh  generate.sh  infer.py  infer.sh  install.sh
scripts/: convert_hf_checkpoint.py  prepare.sh
src/: benchmark.py  cache.py  comm.py  decode.py  env.py  generate.py  infer.py  logger.py  model.py  offload.py  serializer.py  setup.py  tokenizer.py  utils.py  world.py
test/: iroh_async.py  stupid_async.py  test_iroh.py  test_iroh_claude.py
tests/: test_async.py  test_decode.py  test_iroh.py
