[project]
name = "pipelined-gpt-fast"
version = "0.1.0"
description = "AGI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "sentencepiece",
    "tiktoken",
    "blobfile",
    "dotenv>=0.9.9",
    "setuptools>=75.8.2",
    "torch>=2.6.0",
    "triton>=3.2.0",
    "loguru>=0.7.3",
    "lovely-tensors>=0.1.18",
    "tabulate>=0.9.0",
    "iroh_py @ git+https://github.com/primeintellect-ai/iroh_py.git@71a1ca6",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.9.10"]

[tool.ruff]
line-length = 140
