[project]
name = "prime-pipeline"
version = "0.1.0"
description = "Research sandbox for decentralized pipelined inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "blobfile",
    "dotenv>=0.9.9",
    "setuptools>=75.8.2",
    "torch>=2.6.0",
    "triton>=3.2.0",
    "loguru>=0.7.3",
    "lovely-tensors>=0.1.18",
    "tabulate>=0.9.0",
    "autorootcwd>=1.0.1",
    "prime-iroh>=0.1.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.9.10"]

[tool.ruff]
line-length = 140
