[package]
name = "iroh-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "iroh_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
hex = "0.4.3"
iroh = "0.33.0"
pyo3 = { version = "^0.24", features = ["extension-module"] }
pyo3-async-runtimes = { version = "^0.24", features = ["attributes", "tokio-runtime"] }
tokio = "1.40"
